--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && cp src/assets/icon*.png dist/assets/",
+    "build": "tsc && vite build && copy src\\assets\\icon*.png dist\\assets\\",
     "preview": "vite preview"
   },
   "repository": {
